# docparse-api

./: .dockerignore  .gitignore  Dockerfile  README.md  render.yaml
backend/: pyproject.toml
backend/app/: __init__.py  auth.py  ingest.py  jobs.py  main.py  paths.py  pipeline.py  redshift_users.py  section_crop.py  section_merge.py  table_detect.py  text_weight.py  users_db.py
backend/app/extract/: __init__.py  base.py  gemini.py  local_llm.py  section_gate.py
backend/app/ocr/: __init__.py  docai.py  vision_api.py
backend/tests/: test_section_gate.py
