[project]
name = "doc-extract-web"
version = "0.1.0"
description = "Local document extraction web app"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pillow>=10.0.0",
    "google-auth>=2.0.0",
    "google-genai>=1.0.0",
    "requests>=2.31.0",
    "pymupdf>=1.24.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0.0",
    "redshift-connector>=2.1.0",
    "PyJWT>=2.8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
